--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ email: clancysphone@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Largely a mess of content. The idea is to generate content then refine sometime in the future.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://jamesclancy.github.io" # the base hostname & protocol for your site, e.g. 
+url: "" # the base hostname & protocol for your site, e.g. 
 avatar: https://avatars.githubusercontent.com/u/2839134?s=400&v=4
 
 social:
@@ -39,13 +39,13 @@ github:
 toc: true
 
 paginate: 10
+permalink: pretty
 
 # Build settings
-theme: jekyll-theme-chirpy
-theme_mode: dark
 plugins:
   - jekyll-feed
   - jekyll-archives
+  - jekyll-paginate
 
 # Exclude from processing.
 # The following items will not be processed, by default.
@@ -67,64 +67,6 @@ plugins:
 #   - vendor/gems/
 #   - vendor/ruby/
 
-
-# ------------ The following options are not recommended to be modified ------------------
-
-kramdown:
-  syntax_highlighter: rouge
-  syntax_highlighter_opts:   # Rouge Options › https://github.com/jneen/rouge#full-options
-    css_class: highlight
-    # default_lang: console
-    span:
-      line_numbers: false
-    block:
-      line_numbers: true
-      start_line: 1
-
-collections:
-  tabs:
-    output: true
-    sort_by: order
-
-
-defaults:
-  -
-    scope:
-      path: ''          # An empty string here means all files in the project
-      type: posts
-    values:
-      layout: post
-      comments: true    # Enable comments in posts.
-      toc: true         # Display TOC column in posts.
-      # DO NOT modify the following parameter unless you are confident enough
-      # to update the code of all other post links in this project.
-      permalink: /posts/:title/
-  -
-    scope:
-      path: _drafts
-    values:
-      comments: false
-  -
-    scope:
-      path: ''
-      type: tabs             # see `site.collections`
-    values:
-      layout: page
-      permalink: /:title/
-      dynamic_title: true    # Hide title in mobile screens.
-
-sass:
-  style: compressed
-
-compress_html:
-  clippings: all
-  comments: all
-  endings: all
-  profile: false
-  blanklines: false
-  ignore:
-    envs: [development]
-
 exclude:
   - '*.gem'
   - '*.gemspec'
@@ -135,6 +77,9 @@ exclude:
   - gulpfile.js
   - node_modules
   - '*.json'
+
+include:
+  - 'public'
 
 jekyll-archives:
   enabled: [categories, tags]
