Golang has great tooling

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
-        "Wilkens",
-        "ingrediates"
+        "ingrediates",
+        "opinoninated",
+        "Wilkens"
     ]
 }
